| Summary: | ASTERISK-24933: T38 fails negotiation | ||
| Reporter: | Jonathan Rose (jrose) | Labels: | |
| Date Opened: | 2015-04-02 13:47:08 | Date Closed: | 2015-04-08 13:16:50 |
| Priority: | Major | Regression? | No |
| Status: | Closed/Complete | Components: | Channels/chan_pjsip Resources/res_pjsip_t38 |
| Versions: | SVN 13.1.0 13.4.0 | Frequency of Occurrence | Constant |
| Related Issues: | |||
| Environment: | Attachments: | ||
| Description: | Reproduction:
Two Asterisk boxes each have the other as endpoints with authentication set. First Asterisk box originates a call to the second using the PJSIP endpoint. The first Asterisk box uses an extension with sendfax, the second uses an extension with receivefax. The session starts fairly normally, but resolution never appears in fax show session output. After a while (~25 seconds) the call drops and the fax fails. Error messages shown are as follows: Sender: The call dropped prematurely Receiver: Disconnected after permitted retries Note that when not using authentication, the FAX will complete as expected. When using chan_sip as the sender to a receiver of chan_pjsip, the FAX will also complete as expected with authentication, but if chan_pjsip is the sender it will fail regardless of whether the recipient is chan_sip or chan_pjsip. The problem is caused by duplication of a framehook in res_pjsip_t38 which occurs on the second invite sent out when responding to the auth challenge. | ||
| Comments: | |||